TVMax: avances de las Alertas y merge del codigo Android a IOS

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -696,6 +696,9 @@
 	    color: rgb(255, 255, 255);
 	    background-color: rgb(66, 139, 202);
 	}
+	.countryButton{
+		
+	}
 	
 	/* DEMO ONLY - REMOVES UNWANTED MARGIN */
 	/*.well .list-group {
