--- a/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="text-align: right; padding: 5px;" >
 				<div class="btn-group">
-					  <button  type="button" class="btn btn-success share"  style="padding:10px; font-weight: bold;">MI PREDICCIÓN</button>					  
+					  <button  type="button" class="btn btn-success share"  style="padding:10px;">MI PREDICCIÓN</button>					  
 				</div>						
 			</div>
 		</div>
@@ -227,7 +227,15 @@
 					}
 					<!--<group>-->
 					
-				
+					
+					<!--div class="row">
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+							<button class="btn btn-success back " style="padding:10px; margin:5px; font-weight: bold; ">ANTERIOR</button>
+						</div>
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+							<button class="btn btn-success next" style="float: right; padding:10px; margin:5px; font-weight: bold; ">SIGUIENTE</button>
+						</div>
+					</div-->
 					
 					<div class="row title small" style="font-size: 100%;">
 											
