--- a/TVMaxPolla/web/TVMaxPolla/app/views/share.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/share.scala.html
@@ -77,7 +77,7 @@
 
 
 
-@main("La polla de TVMax - FiFA World Cup Brasil 2014") {
+@main2("La polla de TVMax - FiFA World Cup Brasil 2014") {
 
 		<div class="row title" style="background-color: #536bb1;">		
 			<div class="col-md-12">
@@ -462,4 +462,3 @@
 
 }
 
-<script src="@routes.Assets.at("javascripts/polla.js")" type="text/javascript"></script>
