Se actualiza clases asociada al evento prediccion

--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="text-align: right; padding: 5px;" >
 				<div class="btn-group">
-					  <button  type="button" class="btn btn-success share"  style="padding:10px; font-weight: bold;">MI PREDICCIÓN</button>					  
+					  <button  type="button" class="btn btn-success iPrediction"  style="padding:10px; font-weight: bold;">MI PREDICCIÓN</button>					  
 				</div>						
 			</div>
 		</div>
