--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -35,7 +35,7 @@
     	$(function() {
     		
     		
-   		$(document).on('click','.share', function() {
+   		$(document).on('click','.iPrediction', function() {
    			var _url = 'http://mundial.tvmax-9.com/polla/?page=share&id=@session.get("connected")';
 			//window.location = _url;
 			window.open(_url);
