--- a/TVMaxPolla/TVMaxPolla/platforms/android/res/xml/config.xml
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/res/xml/config.xml
@@ -29,6 +29,7 @@
     <preference name="disable-cursor" value="false" />
     <preference name="android-minSdkVersion" value="8" />
     <preference name="android-installLocation" value="auto" />
+    <preference name="load-url-timeout" value="60000" />
     <icon src="icon.png" />
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
@@ -81,5 +82,8 @@
     </feature>
     <feature name="PushPlugin">
         <param name="android-package" value="com.plugin.gcm.PushPlugin" />
+    </feature>
+    <feature name="GAPlugin">
+        <param name="android-package" value="com.adobe.plugins.GAPlugin" />
     </feature>
 </widget>
