--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -321,7 +321,7 @@
 		
 	/*Goles*/
 	
-	body.content-goles #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	/*body.content-goles #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
 	body.content-goles #wrapper .scroller .container .row { padding: 0 !important; margin: 0 !important; }
 	body.content-goles #wrapper .scroller .container .row div { padding: 0 !important; margin: 0 !important;  }
 	
@@ -338,7 +338,95 @@
 	    bottom: 0;	    
 	    border-bottom: solid #FFD455;
 	    
+	}*/
+
+
+
+
+	body.content-goles #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+		
+	body.content-goles #wrapper,
+	body.content-goles #wrapper2 { 
+		position: absolute;
+		z-index: 1; 
+		top: 120px; 
+		bottom: 0; 
+		left: 0; 
+		width: 100%; 
+		background: #fff;
+		
 	}
+
+
+
+	body.content-goles #wrapper2 .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	body.content-goles #wrapper2 .scroller .container .row { padding: 0 !important; margin: 0 !important; }
+	body.content-goles #wrapper2 .scroller .container .row div { padding: 0 !important; margin: 0 !important;  }
+	
+	body.content-goles #wrapper2 .scroller .container figure {position:relative;  width: 100%; height: auto; padding: 0; margin: 0; }|
+	body.content-goles #wrapper2 .scroller .container figure img { width: 100%;  height: auto;}			
+	body.content-goles #wrapper2 .scroller .container figcaption {
+		font-size : 1em;			
+		padding: 5px; 
+		width:100%;
+		line-height:20px;
+		color:#3E79C4; 
+		text-align: left;	   
+	    background-color:#FFFFFF;
+	    bottom: 0;	    
+	    border-bottom: solid #FFD455;
+	    
+	}
+
+
+
+	body.content-goles .calendario-menu.container {
+		position: absolute; 
+		top:50px; 
+		left:0; 		
+		width: 100%; 
+		height: 70px;
+		line-height:70px; 
+		z-index: 2; 
+		background: #E6E6E6; 
+		color:#4D4D4D;
+		border-bottom: solid #FFD455;
+	}
+	
+	body.content-goles .calendario-menu.container .active {
+		color:#3E79C4;
+	}
+	
+
+	
+	body.content-goles .name-month {
+		text-align: center;
+		font-size: 1.2em;
+		font-weight: bold;
+		color:#ffffff;	
+		background: #3E79C4 !important;
+		text-transform: uppercase;
+	}
+	
+	body.content-goles .row div[data-country],
+	body.content-goles .row div[data-phase] {
+		height: 50px;
+		line-height: 50px;
+		font-size: 1.4em;
+		color:#4D4D4D;  
+		background:#FFFFFF;
+		border-bottom: solid 1pt #E0E0E0; 
+	}
+	
+	body.content-goles .row div[data-country]:last-child,
+	body.content-goles .row div[data-phase]:last-child  {
+		border:0;
+	}
+
+
+
+
+
 
 	/*goles*/	
 		
@@ -471,9 +559,7 @@
 
 	/*calendario*/
 	
-	body.content-calendario #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
-	/*body.content-calendario #wrapper2 .scroller .container  { padding:  2px !important; margin: 0 !important;}*/
-
+	body.content-calendario #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}	
 	body.content-calendario #wrapper,
 	body.content-calendario #wrapper2 { 
 		position: absolute;
