--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
@@ -324,7 +324,7 @@
 		
 	/*Goles*/
 	
-	body.content-goles #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	/*body.content-goles #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
 	body.content-goles #wrapper .scroller .container .row { padding: 0 !important; margin: 0 !important; }
 	body.content-goles #wrapper .scroller .container .row div { padding: 0 !important; margin: 0 !important;  }
 	
@@ -341,7 +341,95 @@
 	    bottom: 0;	    
 	    border-bottom: solid #FFD455;
 	    
+	}*/
+
+
+
+
+	body.content-goles #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+		
+	body.content-goles #wrapper,
+	body.content-goles #wrapper2 { 
+		position: absolute;
+		z-index: 1; 
+		top: 120px; 
+		bottom: 0; 
+		left: 0; 
+		width: 100%; 
+		background: #fff;
+		
 	}
+
+
+
+	body.content-goles #wrapper2 .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	body.content-goles #wrapper2 .scroller .container .row { padding: 0 !important; margin: 0 !important; }
+	body.content-goles #wrapper2 .scroller .container .row div { padding: 0 !important; margin: 0 !important;  }
+	
+	body.content-goles #wrapper2 .scroller .container figure {position:relative;  width: 100%; height: auto; padding: 0; margin: 0; }|
+	body.content-goles #wrapper2 .scroller .container figure img { width: 100%;  height: auto;}			
+	body.content-goles #wrapper2 .scroller .container figcaption {
+		font-size : 1em;			
+		padding: 5px; 
+		width:100%;
+		line-height:20px;
+		color:#3E79C4; 
+		text-align: left;	   
+	    background-color:#FFFFFF;
+	    bottom: 0;	    
+	    border-bottom: solid #FFD455;
+	    
+	}
+
+
+
+	body.content-goles .calendario-menu.container {
+		position: absolute; 
+		top:50px; 
+		left:0; 		
+		width: 100%; 
+		height: 70px;
+		line-height:70px; 
+		z-index: 2; 
+		background: #E6E6E6; 
+		color:#4D4D4D;
+		border-bottom: solid #FFD455;
+	}
+	
+	body.content-goles .calendario-menu.container .active {
+		color:#3E79C4;
+	}
+	
+
+	
+	body.content-goles .name-month {
+		text-align: center;
+		font-size: 1.2em;
+		font-weight: bold;
+		color:#ffffff;	
+		background: #3E79C4 !important;
+		text-transform: uppercase;
+	}
+	
+	body.content-goles .row div[data-country],
+	body.content-goles .row div[data-phase] {
+		height: 50px;
+		line-height: 50px;
+		font-size: 1.4em;
+		color:#4D4D4D;  
+		background:#FFFFFF;
+		border-bottom: solid 1pt #E0E0E0; 
+	}
+	
+	body.content-goles .row div[data-country]:last-child,
+	body.content-goles .row div[data-phase]:last-child  {
+		border:0;
+	}
+
+
+
+
+
 
 	/*goles*/	
 		
@@ -721,7 +809,54 @@
 		opacity: 0.4; 
 		filter: alpha(opacity=40);	
 	}
-	 
+	
+	
+	/*leaderboards*/
+	
+	body.content-leaderboard #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+
+	body.content-leaderboard #wrapper,
+	body.content-leaderboard #wrapper2 { 
+		position: absolute;
+		z-index: 1; 
+		top: 120px; 
+		bottom: 0; 
+		left: 0; 
+		width: 100%; 
+		background: #fff;
+		
+	}
+
+	body.content-leaderboard figure {text-align: center; margin: 0 auto; padding: 5px;}
+	body.content-leaderboard figure img {width: 67px; height: 45px;}
+	body.content-leaderboard figcaption {
+		text-align: center; 
+		line-height:20px; 
+		position:relative;
+		font-size : 0.9em;	
+		font-weight: bold;
+		color:#000; 
+	    background:none;
+	    text-shadow: none;
+	}
+	
+	
+	body.content-leaderboard .leaderboard-menu.container {
+		position: absolute; 
+		top:50px; 
+		left:0; 		
+		width: 100%; 
+		height: 70px;
+		line-height:70px; 
+		z-index: 2; 
+		background: #E6E6E6; 
+		color:#4D4D4D;
+		border-bottom: solid #FFD455;
+	}
+	
+	body.content-leaderboard .leaderboard-menu.container .active {
+		color:#3E79C4;
+	}
 	
 	
 	
