Se agrega leaderboard global

--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -1,11 +1,12 @@
-@(phases: List[models.matches.Phase])
+@(phases: List[models.matches.Phase], rank : String)
 
 
 @main("La polla de TVMax - FiFA World Cup Brasil 2014") {
 
 		<div class="row title" style="background-color: #536bb1;">		
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-				<span>¡Bienvenido  @session.get("nick")!</span>	
+				<span>¡Bienvenido  @session.get("nick")!</span><br />
+				<span>Usted está en la posicion </span> <span style="color:#FECD16;">@rank</span> <span> del ranking <a href="@routes.Application.leaderboard()" style="color: #FECD16;">general</a> </span> 
 			</div>	
 			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 large" style="text-align: right;" >				
 				<button type="button" class="btn btn-default menu phase exit " onclick="fReplace();" style="padding: 10px; background-color: #173069;">SALIR</button>	
