--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -6,7 +6,8 @@
 		<div class="row title" style="background-color: #536bb1;">		
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 				<span>¡Bienvenido  @session.get("nick")!</span><br />
-				<span>Usted está en la posicion </span> <span style="color:#FECD16;">@rank</span> <span> del ranking <a href="@routes.Application.leaderboard()" style="color: #FECD16;">general</a> </span> 
+				<span>Usted está en la posicion </span> <span style="color:#FECD16;">@rank</span> <span> del ranking <a href="@routes.Application.leaderboard()" style="color: #FECD16;">general</a> </span>
+				<a href="@routes.Application.leaderboardfb()" style="color: #FECD16;">facebook</a> 
 			</div>	
 			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 large" style="text-align: right;" >				
 				<button type="button" class="btn btn-default menu phase exit " onclick="fReplace();" style="padding: 10px; background-color: #173069;">SALIR</button>	
