--- a/TVMaxPolla/web/TVMaxPolla/app/views/leaderboardfb.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/leaderboardfb.scala.html
@@ -35,12 +35,12 @@
 			
 			<div class="row title" >
 				<div class="col-md-12"  >
-					<span>Ranking y resultados</span>
+					<span>Ranking y resultados de amigos de facebook</span>
 				</div>
 			</div>
 			
 			<div class="row content" >
-				
+				<h1>Cargando...</h1>
 			</div>
 
 		</div>
