--- a/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
@@ -1,38 +1,25 @@
 @(phases: List[models.matches.Phase])
 
 
-@main("La polla de TVMax - FiFA World Cup Brasil 2014") {
+@main2("La polla de TVMax - FiFA World Cup Brasil 2014") {
 
-		<div class="row title" style="background-color: #536bb1;">		
+		<div class="row title" style="background-color: #536bb1;">
+					
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 				<span>¡Bienvenido  @session.get("nick")!</span>	
 			</div>	
-			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 large" style="text-align: right;" >				
+			
+			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" >
+				
+				@if(!phases(0).running) {
+					<button  data-loading-text="Loading..."  type="button" class="btn btn-default menu phase save" >GUARDAR</button>	
+				}
+				
+				<button  type="button" class="btn btn-success iPrediction"  style="padding:10px; font-weight: bold;">MI PREDICCIÓN</button>				
 				<button type="button" class="btn btn-default menu phase exit " onclick="fReplace();" style="padding: 10px; background-color: #173069;">SALIR</button>	
 			</div>			
 		</div>
 
-		<div class="row menu large" style="margin-top:5px; margin-bottom: 5px; padding: 0;">		
-			<div data-type="large" class="col-xs-12 col-sm-8 col-md-8 col-lg-8" style=" padding: 5px;">				
-				<div class="btn-group">
-					@for(phase <- phases) {			
-						@if(phase.getIdPhase() != 5) {
-							<button data-phase="@phase.getIdPhase()"  type="button"  class="btn btn-default menu phase large @("on".when(phase.getIdPhase() == 1)) @("hidden".when(phase.getIdPhase() != 1))" >@phase.getName()</button>
-						}			
-					}
-				</div>					
-			</div>
-			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="text-align: right; padding: 5px;" >
-				<div class="btn-group">
-					  <button  type="button" class="btn btn-success iPrediction"  style="padding:10px;">MI PREDICCIÓN</button>					  
-				</div>						
-			</div>
-		</div>
-
- 		<div class="row menu small" style="background-color: #BAC6DD; padding: 10px 5px;">
-			
-		</div>
- 	
  	
 		<!-- <phase> -->
 		@for(phase <- phases) {
@@ -61,29 +48,23 @@
 									<span>Grupos </span>
 									@if(phase.getIdPhase() == 1) {
 										@for(group <- phase.getMatchGroup()) {
-											<!--span data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1)) @("hidden".when(group.getIdGroup() != 1))" >@group.getName()</span-->
 											<span data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1))" >@group.getName()</span>	
 										}	
 									}				
 								</div>
 							}
-							
-							
-							
+
 							@if(phase.getIdPhase() == 1) {
 								<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 small" style="text-align: right;">
 									@if(phase.getIdPhase() == 1) {
 										<div class="btn-group">
 											@for(group <- phase.getMatchGroup()) {		
-												<!--button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1)) @("hidden".when(group.getIdGroup() != 1)) " >@group.getName()</button-->
 												<button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1)) " >@group.getName()</button>			
 											}
 										</div>
 									}
 								</div>
 							}
-							
-								
 
 						</div>
 				
@@ -164,16 +145,20 @@
 													
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team team-a" data-team="@game.getTeamA().getIdTeam()" >															
 															<div class="row up" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
-																	<!--img class="arrow" src="@routes.Assets.at("images/up.png")" /-->
+																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >																	
+																	@if(!phase.running) {
+																		<img class="arrow" src="@routes.Assets.at("images/up.png")" />	
+																	}	
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
+																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share @phase.running" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
 															</div>
 															<div class="row  down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	<!--img class="arrow" src="@routes.Assets.at("images/down.png")" /-->										
+																	@if(!phase.running) {
+																		<img class="arrow" src="@routes.Assets.at("images/down.png")" />
+																	}
 																</div>
 															</div>
 														</div>
@@ -183,15 +168,19 @@
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team team-b" data-team="@game.getTeamB().getIdTeam()">														
 															<div class="row up" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
-																	<!--img class="arrow" src="@routes.Assets.at("images/up.png")" /-->
+																	@if(!phase.running) {
+																		<img class="arrow" src="@routes.Assets.at("images/up.png")" />	
+																	}
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
+																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share @phase.running" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
 															</div>
 															<div class="row down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	<!--img class="arrow" src="@routes.Assets.at("images/down.png")" /-->										
+																	@if(!phase.running) {
+																		<img class="arrow" src="@routes.Assets.at("images/down.png")" />
+																	}
 																</div>
 															</div>														
 														</div>
@@ -227,16 +216,7 @@
 					}
 					<!--<group>-->
 					
-					
-					<!--div class="row">
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-							<button class="btn btn-success back " style="padding:10px; margin:5px; font-weight: bold; ">ANTERIOR</button>
-						</div>
-						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-							<button class="btn btn-success next" style="float: right; padding:10px; margin:5px; font-weight: bold; ">SIGUIENTE</button>
-						</div>
-					</div-->
-					
+	
 					<div class="row title small" style="font-size: 100%;">
 											
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">							
@@ -247,8 +227,7 @@
 							<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 small" style="text-align: right;">
 								@if(phase.getIdPhase() == 1) {
 									<div class="btn-group">
-										@for(group <- phase.getMatchGroup()) {		
-											<!--button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1)) @("hidden".when(group.getIdGroup() != 1)) " >@group.getName()</button-->
+										@for(group <- phase.getMatchGroup()) {
 											<button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1))" >@group.getName()</button>			
 										}
 									</div>
@@ -257,14 +236,8 @@
 						}
 							
 					</div>
-					
-					
-								
-			 		<div class="row menu small" style="background-color: #BAC6DD; padding: 10px 5px;">
-						
-					</div>
-					
-					
+
+										
 	
 				</div>
 			</div>	
