--- a/TVMaxPolla/web/TVMaxPolla/app/views/leaderboardfb.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/leaderboardfb.scala.html
@@ -39,8 +39,8 @@
 				</div>
 			</div>
 			
-			<div class="row content" >
-				<h1>Cargando...</h1>
+			<div class="row content"  >
+				<h3 style="text-align: center; color:#333333;">Cargando...</h3>
 			</div>
 
 		</div>
