--- a/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
@@ -11,9 +11,9 @@
 			
 			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" >
 				
-				@if(!phases(0).running) {
-					<button  data-loading-text="Loading..."  type="button" class="btn btn-default menu phase save" >GUARDAR</button>	
-				}
+				
+				<button  data-loading-text="Loading..."  type="button" class="btn btn-default menu phase save" >GUARDAR</button>	
+				
 				
 				<button  type="button" class="btn btn-success iPrediction"  style="padding:10px; font-weight: bold;">MI PREDICCIÓN</button>				
 				<button type="button" class="btn btn-default menu phase exit " onclick="fReplace();" style="padding: 10px; background-color: #173069;">SALIR</button>	
@@ -146,19 +146,19 @@
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team team-a" data-team="@game.getTeamA().getIdTeam()" >															
 															<div class="row up" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >																	
-																	@if(!phase.running) {
-																		<img class="arrow" src="@routes.Assets.at("images/up.png")" />	
-																	}	
+																
+																		<!--img class="arrow" src="@routes.Assets.at("images/up.png")" /-->	
+																	
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share @phase.running" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
+																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
 															</div>
 															<div class="row  down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	@if(!phase.running) {
-																		<img class="arrow" src="@routes.Assets.at("images/down.png")" />
-																	}
+																	
+																		<!--img class="arrow" src="@routes.Assets.at("images/down.png")" /-->
+																	
 																</div>
 															</div>
 														</div>
@@ -168,19 +168,19 @@
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team team-b" data-team="@game.getTeamB().getIdTeam()">														
 															<div class="row up" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
-																	@if(!phase.running) {
-																		<img class="arrow" src="@routes.Assets.at("images/up.png")" />	
-																	}
+																	
+																		<!--img class="arrow" src="@routes.Assets.at("images/up.png")" /-->	
+																	
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share @phase.running" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
+																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
 															</div>
 															<div class="row down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	@if(!phase.running) {
-																		<img class="arrow" src="@routes.Assets.at("images/down.png")" />
-																	}
+															
+																		<!--img class="arrow" src="@routes.Assets.at("images/down.png")" /-->
+															
 																</div>
 															</div>														
 														</div>
