Se actualiza el running

--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -170,7 +170,7 @@
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
+																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share true" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
 															</div>
 															<div class="row  down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
@@ -188,7 +188,7 @@
 																</div>
 															</div>
 															<div class="row" >
-																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
+																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal share true" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
 															</div>
 															<div class="row down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
