--- a/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
@@ -1,4 +1,4 @@
-@(phases: List[models.matches.Phase])
+@(phases: List[models.matches.Phase], rank : String)
 
 
 @main2("La polla de TVMax - FiFA World Cup Brasil 2014") {
@@ -6,8 +6,15 @@
 		<div class="row title" style="background-color: #536bb1;">
 					
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-				<span>¡Bienvenido  @session.get("nick")!</span>	
-			</div>	
+				<span>¡Bienvenido  @session.get("nick")!</span><br />
+				<span>Estás en la posici&oacute;n </span> <span style="color:#FECD16;">@rank</span> <span> del ranking <a href="@routes.Application.leaderboard()" style="color: #FECD16;">General</a> </span>
+
+				@if(session.get("id_social") != "null") {
+					<br />Tambi&eacute;n puedes compararte con tus amigos de <a href="@routes.Application.leaderboardfb()" style="color: #FECD16;">Facebook</a>	
+				}
+				
+								 				 				
+			</div>
 			
 			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" >
 				
