--- a/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index2.scala.html
@@ -5,7 +5,7 @@
 
 		<div class="row title" style="background-color: #536bb1;">
 					
-			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 				<span>¡Bienvenido  @session.get("nick")!</span><br />
 				<span>Estás en la posici&oacute;n </span> <span style="color:#FECD16;">@rank</span> <span> del ranking <a href="@routes.Application.leaderboard()" style="color: #FECD16;">General</a> </span>
 
@@ -15,7 +15,7 @@
 								 				 				
 			</div>
 			
-			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="float: right;" >
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="float: right;" >
 				<div class="row" style="float: right; padding: 0 !important; margin: 0 !important; ">
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 iPrediction" style="cursor: pointer; padding: 0 !important; margin: 0 !important; " >
 						<div style="width:100%; height:30px; line-height:30px; text-align: center; font-size: 1.4em;">
@@ -34,9 +34,7 @@
 						</div>
 					</div>
 				</div>
-				
-				<!--button  type="button" class="btn btn-success iPrediction"  style="padding:10px; font-weight: bold;">MI PREDICCIÓN</button>				
-				<button type="button" class="btn btn-default menu phase exit " onclick="fReplace();" style="padding: 10px; background-color: #173069;">SALIR</button-->	
+				run 900	
 			</div>			
 		</div>
 
